syntax = "proto3";
package syringe.api.exp;

import "google/api/annotations.proto";
import "validate/validate.proto";

service CollectionService {

  rpc ListCollections(CollectionFilter) returns (Collections) {
    option (google.api.http) = {
      get: "/exp/collection"
    };
  }

  rpc GetCollection(CollectionID) returns (Collection) {
    option (google.api.http) = {
      get: "/exp/collection/{id}"
    };
  }

}

message CollectionFilter {}

message Collections {
  repeated Collection collections = 1;
}

message CollectionID {
  int32 id = 1;
}

message LessonSummary {
  int32 lessonId = 1;
  string lessonName = 2;
  string lessonDescription = 3;
}

message Collection {
  int32 Id = 1 [(validate.rules).int32.gt = 0];
  string Title = 2 [(validate.rules).string.min_len = 1];
  string Image = 3 [(validate.rules).string.min_len = 1];
  string Website = 4 [(validate.rules).string.min_len = 1];
  string ContactEmail = 5;

  // Why should users view your collection?
  string BriefDescription = 6 [(validate.rules).string = {min_len: 1, max_len: 350}];

  // Why should users continue and view your lessons?
  string LongDescription = 7 [(validate.rules).string = {min_len: 1, max_len: 1000}];

  string Type = 8 [(validate.rules).string = {in: ["consultancy", "vendor", "community"]}];
  string Tier = 9 [(validate.rules).string = {in: ["local", "ptr", "prod"]}];
  string CollectionFile = 10;

  repeated LessonSummary Lessons = 11;
}
